--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Logo.png" />
+    <link rel="icon" type="image/png" href="/viewcall-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Leaderflix - Plataforma de streaming educativo" />
-    <title>Leaderflix - Streaming </title>
+    <meta name="description" content="Viewcall - Plataforma de videollamadas" />
+    <title>Viewcall</title>
   </head>
   <body>
     <div id="root"></div>
